unpackaged/main/default/objects/Checklist1__c/Checklist1__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>Configuración del checklist planta1</description>
    <label>Checklist1</label>
</CustomObject>