unpackaged/main/default/objects/Checklist1__c/fields/AccesoriosElectricosPreparacion__c.field-meta.xml
<CustomField>
    <fullName>AccesoriosElectricosPreparacion__c</fullName>
    <label>Accesorios eléctricos y preparación</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>