unpackaged/main/default/objects/Checklist1__c/fields/ColocacionCalentadoresSolares__c.field-meta.xml
<CustomField>
    <fullName>ColocacionCalentadoresSolares__c</fullName>
    <label>Colocación de calentadores solares (S.A)</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>