unpackaged/main/default/objects/Checklist1__c/fields/MarcosPuertasVentanasChapasCorrediza__c.field-meta.xml
<CustomField>
    <fullName>MarcosPuertasVentanasChapasCorrediza__c</fullName>
    <label>Marcos puertas ventanas chapas corrediza</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>