unpackaged/main/default/objects/Checklist1__c/fields/PruebaPluvialRealizada__c.field-meta.xml
<CustomField>
    <fullName>PruebaPluvialRealizada__c</fullName>
    <label>Prueba del pluvial realizada</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>