unpackaged/main/default/objects/Checklist1__c/fields/PruebasGasRealizada__c.field-meta.xml
<CustomField>
    <fullName>PruebasGasRealizada__c</fullName>
    <label>Pruebas de gas realizada</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>