unpackaged/main/default/objects/Checklist1__c/fields/PuertasVentanasChapasMarcos__c.field-meta.xml
<CustomField>
    <fullName>PuertasVentanasChapasMarcos__c</fullName>
    <label>Puertas ventanas chapas y marcos</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>